@@ -16,19 +16,20 @@
 
 package com.navercorp.pinpoint.uristat.web.model;
 
+import com.google.common.primitives.Doubles;
 import com.navercorp.pinpoint.common.server.util.ObjectUtils;
 import com.navercorp.pinpoint.common.server.util.StringPrecondition;
+import com.navercorp.pinpoint.common.server.util.array.DoubleArray;
 import com.navercorp.pinpoint.common.server.util.timewindow.TimeWindow;
 import com.navercorp.pinpoint.metric.web.view.TimeSeriesValueView;
 import com.navercorp.pinpoint.metric.web.view.TimeseriesChartType;
 import com.navercorp.pinpoint.metric.web.view.TimeseriesValueGroupView;
+import org.springframework.util.Assert;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class UriStatGroup implements TimeseriesValueGroupView {
     private final String uri;
@@ -38,19 +39,22 @@ public class UriStatGroup implements TimeseriesValueGroupView {
 
     public static final UriStatGroup EMPTY_URI_STAT_GROUP = new UriStatGroup();
 
-    public UriStatGroup() {
+    private UriStatGroup() {
         this.uri = ObjectUtils.EMPTY_STRING;
-        this.values = Collections.emptyList();
+        this.values = List.of();
         this.chartType = TimeseriesChartType.bar;
         this.unit = ObjectUtils.EMPTY_STRING;
     }
 
-    public UriStatGroup(String uri, int dataSize, TimeWindow timeWindow, List<UriStatChartValue> uriStats, List<String> fieldNames) {
-        Objects.requireNonNull(uriStats);
-        this.uri = uri;
-        this.values = UriStatValue.createChartValueList(dataSize, timeWindow, uriStats, fieldNames);
-        this.chartType = uriStats.isEmpty()? TimeseriesChartType.bar: uriStats.get(0).getChartType();
-        this.unit = uriStats.isEmpty()? ObjectUtils.EMPTY_STRING: uriStats.get(0).getUnit();
+    public UriStatGroup(String uri, TimeWindow timeWindow,
+                        List<UriStatChartValue> uriStats,
+                        List<String> fieldNames) {
+        Assert.notEmpty(uriStats, "uriStats must not be empty");
+        this.uri = Objects.requireNonNullElse(uri, ObjectUtils.EMPTY_STRING);
+        this.values = UriStatValue.createChartValueList(timeWindow, uriStats, fieldNames);
+        UriStatChartValue uriStatChartValue = uriStats.get(0);
+        this.chartType = uriStatChartValue.getChartType();
+        this.unit = uriStatChartValue.getUnit();
     }
 
     @Override
@@ -74,33 +78,29 @@ public class UriStatGroup implements TimeseriesValueGroupView {
     }
 
     public static class UriStatValue implements TimeSeriesValueView {
+        private static final double NULL = -1D;
+
         private final String fieldName;
         private final List<Double> values;
 
-        private static Double nullToNegativeOne(Double d) {
-            return org.apache.commons.lang3.ObjectUtils.defaultIfNull(d, -1D);
-        }
+        public static List<TimeSeriesValueView> createChartValueList(TimeWindow timeWindow, List<UriStatChartValue> uriStats, List<String> fieldNames) {
 
-        public static List<TimeSeriesValueView> createChartValueList(int dataSize, TimeWindow timeWindow, List<UriStatChartValue> uriStats, List<String> fieldNames) {
             List<TimeSeriesValueView> values = new ArrayList<>();
 
             final int bucketSize = uriStats.get(0).getValues().size();
 
-            for (int histogramIndex = 0 ; histogramIndex < bucketSize; histogramIndex++) {
-                Double[] filledData = new Double[dataSize];
+            for (int i = 0 ; i < bucketSize; i++) {
+                double[] filledData = DoubleArray.newArray(timeWindow.getWindowRangeCount(), NULL);
 
                 for (UriStatChartValue uriStat : uriStats) {
-                    int filledIndex = timeWindow.getWindowIndex(uriStat.getTimestamp());
-                    if ((filledData[filledIndex] != null) && (filledData[filledIndex] != 0)) {
-                        throw new RuntimeException("Uri stat timestamp mismatch.");
-                    }
-                    filledData[filledIndex] = uriStat.getValues().get(histogramIndex);
+                    int index = timeWindow.getWindowIndex(uriStat.getTimestamp());
+                    filledData[index] = uriStat.getValues().get(i);
                 }
-                List<Double> adjusted = Arrays.stream(filledData).map(UriStatValue::nullToNegativeOne).collect(Collectors.toList());
-                values.add(new UriStatValue(fieldNames.get(histogramIndex), adjusted));
+                values.add(new UriStatValue(fieldNames.get(i), Doubles.asList(filledData)));
             }
             return values;
         }
+
 
         public UriStatValue(String fieldName, List<Double> uriStats) {
             this.fieldName = StringPrecondition.requireHasLength(fieldName, "fieldName");
